# openapi-sync-plugin

./: .gitignore  README.ko.md  README.md  SHOW_HN.md  SHOW_HN.txt
.claude/: hooks.json  session-context.json
.claude-plugin/: marketplace.json  plugin.json
.claude/designs/: session-context-v2.md
.claude/scripts/: load-context.sh  save-context.sh  update-context.sh
assets/: .gitkeep
commands/: analyze.md  api-analyze.md  api-diff.md  api-init.md  api-lint.md  api-status.md  api-sync.md  api-validate.md  diff.md  lint.md  oas-analyze.md  oas-diff.md  oas-init.md  oas-lint.md  oas-status.md  oas-sync.md  oas-validate.md  validate.md
mcp-servers/elenchus/: CHANGELOG.md  README.ko.md  README.md  package-lock.json  package.json
mcp-servers/oas/: Cargo.toml
mcp-servers/oas/src/: main.rs
mcp-servers/oas/src/services/: cache.rs  diff.rs  graph.rs  mod.rs  parser.rs
mcp-servers/oas/src/tools/: deps.rs  diff.rs  generate.rs  mod.rs  parse.rs  status.rs
mcp-servers/oas/src/types/: config.rs  error.rs  graph.rs  mod.rs  openapi.rs
mcp-servers/oas/src/utils/: hash.rs  mod.rs
mcp-servers/session-context/: README.md  package-lock.json  package.json
plugins/elenchus/: README.ko.md  README.md
plugins/fsd-architect/: README.md
plugins/oas/: ARCHITECTURE.md  EDGE-CASES.md  ERROR-CODES.md  EXAMPLES.md  EXTENSIBILITY.md  PERFORMANCE.md  QUICKSTART.md  README.ko.md  README.md
skills/cache-manager/: SKILL.md
skills/code-generator/: SKILL.md
skills/openapi-parser/: SKILL.md
templates/: .openapi-sync.cache.json  .openapi-sync.json  .openapi-sync.state.json
(+84 files in other folders)
